--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,7 @@
         <maven.scm.provider.git.implementation>org.apache.maven.scm.provider.git.jgit.JGitScmProvider</maven.scm.provider.git.implementation>
         <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
+        <surefire.version>2.18.1</surefire.version>
     </properties>
     <dependencies>
         <dependency>
@@ -106,16 +107,12 @@
                 <plugin>
                     <artifactId>maven-checkstyle-plugin</artifactId>
                     <version>2.15</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>net.trajano</groupId>
-                            <artifactId>coding-standards</artifactId>
-                            <version>${coding.standards.version}</version>
-                        </dependency>
-                    </dependencies>
                     <configuration>
                         <configLocation>config/checkstyle-configuration.xml</configLocation>
                         <headerLocation>LICENSE</headerLocation>
+                        <linkXRef>true</linkXRef>
+                        <includes>**/*.java,**/*.properties</includes>
+                        <excludes>target/**,src/test/**</excludes>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -135,6 +132,24 @@
                     <version>1.4</version>
                 </plugin>
                 <plugin>
+                    <artifactId>maven-failsafe-plugin</artifactId>
+                    <version>${surefire.version}</version>
+                    <executions>
+                        <execution>
+                            <id>integration-test</id>
+                            <goals>
+                                <goal>integration-test</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>verify</id>
+                            <goals>
+                                <goal>verify</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
                     <artifactId>maven-gpg-plugin</artifactId>
                     <version>1.6</version>
                 </plugin>
@@ -143,8 +158,40 @@
                     <version>2.5.2</version>
                 </plugin>
                 <plugin>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.5</version>
+                    <executions>
+                        <execution>
+                            <id>attach-jar</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>jar</goal>
+                                <goal>test-jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <version>2.10.3</version>
+                    <configuration>
+                        <detectJavaApiLink>true</detectJavaApiLink>
+                        <detectLinks>false</detectLinks>
+                        <detectOfflineLinks>false</detectOfflineLinks>
+                        <quiet>true</quiet>
+                        <useStandardDocletOptions>true</useStandardDocletOptions>
+                        <show>private</show>
+                        <doclet>org.jboss.apiviz.APIviz</doclet>
+                        <docletArtifact>
+                            <groupId>org.jboss.apiviz</groupId>
+                            <artifactId>apiviz</artifactId>
+                            <version>1.3.2.GA</version>
+                        </docletArtifact>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-jxr-plugin</artifactId>
+                    <version>2.4</version>
                 </plugin>
                 <plugin>
                     <artifactId>maven-linkcheck-plugin</artifactId>
@@ -174,7 +221,16 @@
                         </dependency>
                     </dependencies>
                     <configuration>
-                        <ruleset>/config/pmd-rules.xml</ruleset>
+                        <linkXref>true</linkXref>
+                        <sourceEncoding>utf-8</sourceEncoding>
+                        <rulesets>
+                            <ruleset>config/pmd-rules.xml</ruleset>
+                        </rulesets>
+                        <typeResolution>true</typeResolution>
+                        <includeXmlInSite>true</includeXmlInSite>
+                        <excluderoots>
+                            <excluderoot>target</excluderoot>
+                        </excluderoots>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -223,46 +279,62 @@
                 <plugin>
                     <artifactId>maven-source-plugin</artifactId>
                     <version>2.4</version>
+                    <executions>
+                        <execution>
+                            <id>attach-sources</id>
+                            <phase>package</phase>
+                            <goals>
+                                <goal>jar</goal>
+                                <goal>test-jar</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>${surefire.version}</version>
+                </plugin>
+                <plugin>
+                    <artifactId>maven-surefire-report-plugin</artifactId>
+                    <version>${surefire.version}</version>
                 </plugin>
                 <plugin>
                     <groupId>net.trajano.mojo</groupId>
                     <artifactId>cleanpom-maven-plugin</artifactId>
-                    <version>1.0.5-SNAPSHOT</version>
+                    <version>1.1.0-SNAPSHOT</version>
                 </plugin>
                 <plugin>
                     <groupId>net.trajano.mojo</groupId>
                     <artifactId>m2e-codestyle-maven-plugin</artifactId>
-                    <version>1.1.1-SNAPSHOT</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>net.trajano</groupId>
-                            <artifactId>coding-standards</artifactId>
-                            <version>${coding.standards.version}</version>
-                        </dependency>
-                    </dependencies>
+                    <version>2.0.0-SNAPSHOT</version>
                     <configuration>
-                        <codeStyleBaseUrl>codestyle</codeStyleBaseUrl>
+                        <codeStyleBaseUrl>codestyle/</codeStyleBaseUrl>
                     </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>findbugs-maven-plugin</artifactId>
                     <version>3.0.1</version>
-                    <dependencies>
-                        <dependency>
-                            <groupId>net.trajano</groupId>
-                            <artifactId>coding-standards</artifactId>
-                            <version>${coding.standards.version}</version>
-                        </dependency>
-                    </dependencies>
                     <configuration>
-                        <excludeFilterFile>config/findbugs-exclude-filter.xml</excludeFilterFile>
+                        <excludeFilterFile>/config/findbugs-exclude-filter.xml</excludeFilterFile>
                     </configuration>
                 </plugin>
                 <plugin>
                     <groupId>org.codehaus.mojo</groupId>
                     <artifactId>versions-maven-plugin</artifactId>
                     <version>2.1</version>
+                </plugin>
+                <plugin>
+                    <groupId>org.jacoco</groupId>
+                    <artifactId>jacoco-maven-plugin</artifactId>
+                    <version>0.7.2.201409121644</version>
+                    <executions>
+                        <execution>
+                            <goals>
+                                <goal>prepare-agent</goal>
+                            </goals>
+                        </execution>
+                    </executions>
                 </plugin>
                 <plugin>
                     <groupId>org.sonatype.plugins</groupId>
@@ -289,6 +361,7 @@
                 <executions>
                     <execution>
                         <goals>
+                            <goal>clean-xml</goal>
                             <goal>clean</goal>
                         </goals>
                     </execution>
