--- a/pom.xml
+++ b/pom.xml
@@ -263,6 +263,10 @@
                     </configuration>
                 </plugin>
                 <plugin>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>2.7</version>
+                </plugin>
+                <plugin>
                     <artifactId>maven-scm-plugin</artifactId>
                     <version>1.9.4</version>
                     <dependencies>
@@ -314,12 +318,12 @@
                 <plugin>
                     <groupId>net.trajano.mojo</groupId>
                     <artifactId>cleanpom-maven-plugin</artifactId>
-                    <version>1.1.0-SNAPSHOT</version>
+                    <version>1.1.0</version>
                 </plugin>
                 <plugin>
                     <groupId>net.trajano.mojo</groupId>
                     <artifactId>m2e-codestyle-maven-plugin</artifactId>
-                    <version>2.0.0-SNAPSHOT</version>
+                    <version>2.0.0</version>
                     <configuration>
                         <codeStyleBaseUrl>codestyle/</codeStyleBaseUrl>
                         <javaCleanupProfileXmlUrl>codestyle/eclipse/java-cleanup.xml</javaCleanupProfileXmlUrl>
