--- a/pom.xml
+++ b/pom.xml
@@ -160,6 +160,10 @@
                     <version>2.5.2</version>
                 </plugin>
                 <plugin>
+                    <artifactId>maven-invoker-plugin</artifactId>
+                    <version>1.10</version>
+                </plugin>
+                <plugin>
                     <artifactId>maven-jar-plugin</artifactId>
                     <version>2.5</version>
                     <executions>
@@ -393,6 +397,11 @@
         </plugins>
         <extensions>
             <extension>
+                <groupId>net.trajano</groupId>
+                <artifactId>coding-standards</artifactId>
+                <version>${coding-standards.version}</version>
+            </extension>
+            <extension>
                 <groupId>net.trajano.wagon</groupId>
                 <artifactId>wagon-git</artifactId>
                 <version>2.0.3</version>
@@ -426,10 +435,6 @@
                         </reports>
                     </reportSet>
                 </reportSets>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>taglist-maven-plugin</artifactId>
             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
