--- a/pom.xml
+++ b/pom.xml
@@ -101,12 +101,19 @@
                 <plugin>
                     <artifactId>maven-checkstyle-plugin</artifactId>
                     <version>2.15</version>
+                    <dependencies>
+                        <dependency>
+                            <groupId>com.puppycrawl.tools</groupId>
+                            <artifactId>checkstyle</artifactId>
+                            <version>6.6</version>
+                        </dependency>
+                    </dependencies>
                     <configuration>
                         <configLocation>config/checkstyle-configuration.xml</configLocation>
                         <headerLocation>LICENSE</headerLocation>
                         <linkXRef>true</linkXRef>
-                        <includes>**/*.java,**/*.properties</includes>
-                        <excludes>target/**,src/test/**</excludes>
+                        <includeTestResources>false</includeTestResources>
+                        <excludes>^target/generated-sources</excludes>
                     </configuration>
                 </plugin>
                 <plugin>
@@ -235,9 +242,9 @@
                         </rulesets>
                         <typeResolution>true</typeResolution>
                         <includeXmlInSite>true</includeXmlInSite>
-                        <excluderoots>
-                            <excluderoot>target</excluderoot>
-                        </excluderoots>
+                        <excludeRoots>
+                            <excludeRoot>target/generated-sources</excludeRoot>
+                        </excludeRoots>
                     </configuration>
                 </plugin>
                 <plugin>
